route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 80
